# aman-al-rayan

./: .env  .env.example  .gitignore  .vercelignore  APP_HTML_SETUP.md  Dockerfile  MINI_APP_SETUP.md  SETUP_COMPLETE.md  app.html  deploy.sh  main.py  pyproject.toml  requirements.txt  setup.sh  vercel.json
api/: index.py
data/: bot_database.db
src/: config.py
src/database/: db_manager.py
src/handlers/: admin_handler.py  cart_handler.py  contact_handler.py  mini_app_handler.py  navigation_handler.py  order_handler.py  referral_handler.py  service_handler.py  start_handler.py  subscription_handler.py  webapp_handler.py
src/mini_app/: __init__.py  app.py  models.py  security.py
src/mini_app/api/: __init__.py  dependencies.py  router.py
src/mini_app/static/booking/: index.html
src/mini_app/static/lite/: index.html
src/mini_app/versions/: __init__.py
src/mini_app/versions/booking/: __init__.py
src/mini_app/versions/lite/: __init__.py
src/utils/: api_client.py  keyboards.py  messages.py
tg_bot_env/: pyvenv.cfg
