[project]
name = "telegram-mini-app"
version = "1.0.0"
description = "Telegram Mini App with Lite and Booking versions"
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot==20.3",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "FastAPI==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "PyJWT==2.8.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
